--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Oh noes, more lemmings!</title>
+        <title>Muh website</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        
+        <header>
+        <h1>MITÄ ELÄIMET SANOVAT?</h1>
+        </header>
         
         <article>
             <img src="img/cow.png"/>
