--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <article>
             <img src="img/cow.png"/>
             <input type="button" value="Mitä lehmä sanoo?" onclick="muu()"/>
+            <input type="button" value="WHAT DOES A FREEDOM COW SAY?" onclick="americancow()"/>
         </article>
 
         <article>
