--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Muh website</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        
-        <header>
-        <h1>MITÄ ELÄIMET SANOVAT?</h1>
-        </header>
-        
-        <article>
-            <img src="img/cow.png"/>
-            <input type="button" value="Mitä lehmä sanoo?" onclick="muu()"/>
-            <input type="button" value="WHAT DOES A FREEDOM COW SAY?" onclick="americancow()"/>
-        </article>
+<head>
+    <title>WIP</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-        <article>
-            <img src="img/pig.png"/>
-            <input type="button" value="Mitä sika sanoo?" onclick="nof()"/>
-        </article>
+<body>
+    <h1>Sandbox</h1>
+    <p>This is where the game will show up</p>
+</body>
 
-        <article>
-            <img src="img/chicken.png"/>
-            <input type="button" value="Mitä kana sanoo?" onclick="kot()"/>
-        </article>
-        <script src="javascript/code.js"></script>
-
-    </body>
+<footer>
+    <p>Copyright <a href="www.github.com/micaminoff">Michael Aminoff</a> et al.</p>
+</footer>
 </html>
