--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </body>
 
 <footer>
-    <p>Copyright <a href="www.github.com/micaminoff">Michael Aminoff</a> et al.</p>
+    <p>Copyright <a href="http://www.github.com/micaminoff">Michael Aminoff</a> et al.</p>
 </footer>
 </html>
