Gave the webiste a facelift

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <body>
     <h1>Sandbox</h1>
-    <p>This is where the game will show up</p>
+    <div id="container">
+        <p>This is where the game will show up</p>
+    </div>
 </body>
 
 <footer>
