Added js and graphics

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
 <body>
     <h1>Sandbox</h1>
-    <div id="container">
-        <p>This is where the game will show up</p>
-    </div>
+    <canvas></canvas>
+    
+    <footer>
+    <p>Copyright <a href="http://www.github.com/micaminoff">Michael Aminoff</a> et al.</p>
+    </footer>
+    
+    <script src="src/script.js"></script>
 </body>
 
-<footer>
-    <p>Copyright <a href="http://www.github.com/micaminoff">Michael Aminoff</a> et al.</p>
-</footer>
 </html>
