Changed title and disabled highlighting

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 
 <body>
-    <h1>Sandbox</h1>
+    <h1 class="noselect">Castle Defense Idle</h1>
     <canvas></canvas>
     
     <footer>
-    <p>Copyright <a href="http://www.github.com/micaminoff">Michael Aminoff</a> et al.</p>
+    <p class="noselect">
+        Copyright <a href="http://www.github.com/micaminoff">Michael Aminoff</a> et al.
+    </p>
     </footer>
     
     <script src="src/script.js"></script>
