--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1 class="noselect">Castle Defense Idle</h1>
-    <canvas></canvas>
+    <canvas id="canvas" width="1000" height="500"></canvas>
     
     <footer>
     <p class="noselect">
