Made table static

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Castle Defense Idle</h1>
     <canvas id="canvas" width="1000" height="500"></canvas>
     
-    <table style="width:50%" id="stats">
+    <table style="width:1000px" id="stats">
         <tr>
             <th>Kills</th>
             <th>Loot</th> 
