--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </tr>
     </table>
     
-    <audio id="audio/ouch.mp3" src="audio/ouch.mp3"/>
+    <audio id="audio/ouch.wav" src="audio/ouch.wav"/>
     
     <footer>
     <p>
