--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         </tr>
     </table>
     
-    <audio id="audio/ouch.wav" src="audio/ouch.wav"/>
+    <audio id="audio/ouch.wav">
+        <source src="audio/ouch.wav" type="audio/wav">
+    </audio>
     
     <footer>
     <p>
