--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </tr>
     </table>
     
-    <audio id="audio/ouch.wav">
-        <source src="audio/ouch.wav" type="audio/wav">
+    <audio src="audio/ouch.wav" autoplay id="audio/ouch.wav">
+        Your browser doesn't support my audio
     </audio>
     
     <footer>
