--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </tr>
     </table>
     
-    <audio src="audio/ouch.wav" autoplay id="audio/ouch.wav">
-        Your browser doesn't support my audio
+    <audio src="audio/ouch.wav" controls>
+        Your stupid browser doesn't support HTML 5 audio.
     </audio>
     
     <footer>
