--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </tr>
     </table>
     
-    <audio src="audio/ouch.wav" controls>
+    <audio src="audio/ouch.wav" id="audio/ouch.wav">
         Your stupid browser doesn't support HTML 5 audio.
     </audio>
     
