--- a/CaDeId/index.html
+++ b/CaDeId/index.html
@@ -32,6 +32,7 @@
     </footer>
     
     <script src="src/script.js"></script>
+    <audio id="audio/ouch.wav" src="audio/ouch.wav"/>
 </body>
 
 </html>
