--- a/CaDeId/index.html
+++ b/CaDeId/index.html
@@ -9,16 +9,21 @@
     <h1>Castle Defense Idle</h1>
     <canvas id="canvas" width="1000" height="500"></canvas>
     
+    <!--Lazy call-->
+    <button onclick="game.sounds.toggle();">Toggle sounds</button>
+    <button onclick="game.reset();">Reset</button>
     <table style="width:1000px" id="stats">
         <tr>
             <th>Kills</th>
             <th>Loot</th> 
             <th>Weapon</th>
             <th>Damage</th>
+            <th>Castle Health</th>
         </tr>
         <tr>
             <td>0</td>
             <td>0</td> 
+            <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
@@ -31,8 +36,9 @@
     </p>
     </footer>
     
-    <audio id="audio/ouch.wav" src="audio/ouch.wav"/>
     <script src="src/script.js"></script>
+    <!-- This is the path to the audio file -->
+    <audio id="audio/ouch.wav" src="audio/ouch.wav"/>
 </body>
 
 </html>
