--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <canvas id="canvas" width="1000" height="500"></canvas>
     
     <!--Lazy call-->
-    <button onclick="game.sounds.toggle();">Toggle sounds</button>
+    <button onclick="game.settings.sounds.toggle();">Toggle sounds</button>
     <button onclick="game.reset();">Reset</button>
     <table style="width:1000px" id="stats">
         <tr>
