--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="src/script.js"></script>
     <!-- This is the path to the audio file -->
     <audio id="audio/ouch.wav" src="audio/ouch.wav"/>
+    <img src="img/background_duck.png" alt="background_duck">
 </body>
 
 </html>
