--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <h1>Castle Defense Idle</h1>
+    <canvas id="background" width="1000" height="500"></canvas>
     <canvas id="canvas" width="1000" height="500"></canvas>
     
     <!--Lazy call-->
