--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
     <h1>Castle Defense Idle</h1>
-    <canvas id="background" width="1000" height="500"></canvas>
-    <canvas id="canvas" width="1000" height="500"></canvas>
+    <canvas id="canvas" width="1000" height="500">
+        <img src="img/background_duck.png" alt="Background duck">
+    </canvas>
 
     
     <!--Lazy call-->
