--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--chart.js library-->
         <script src="https://cdnjs.com/libraries/chart.js"></script>
+        <!--css file-->
+        <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
     
     <body>
