--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!--chart.js library-->
         <script src="https://cdnjs.com/libraries/chart.js"></script>
         <!--css file-->
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     
     <body>
