--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <script>
         var canvas = document.getElementById("myChart");
         var ctx = canvas.getContext("2d");
-        new Chart(ctx).Line(data, options);
+        ctx.fillStyle = "#FF0000";
     </script>
 </html>
