--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             var ctx = canvas.getContext("2d");
             ctx.fillStyle = "#FF0000";
             ctx.fillRect(0,0,150,75);
+            new Chart(ctx).PolarArea(data, options);
         </script>
         
     </body>
