--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                     }
                 ]
             };
+            
+            var options = {};
 
         </script>
         
