--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!--chart.js library-->
-        <script src="https://cdnjs.com/libraries/chart.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
         <!--css file-->
         <link rel="stylesheet" type="text/css" href="style.css">
         <!--javascript-->
